--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "engine-preflight",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Verify that your node app can run on the currently installed version of node running on your system.",
   "main": "index.js",
   "scripts": {
@@ -25,5 +25,8 @@
   "dependencies": {
     "commander": "3.0.2",
     "semver": "6.3.0"
+  },
+  "bin": {
+    "check-engine": "./index.js"
   }
 }
