--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "engine-preflight",
-  "version": "1.0.2",
+  "author": "Bradley D. Cooper",
+  "bin": {
+    "check-engine": "./index.js"
+  },
+  "bugs": {
+    "url": "https://github.com/unimaginativeGitHub/engine-preflight/issues"
+  },
+  "dependencies": {
+    "commander": "11.0.0",
+    "semver": "7.5.4"
+  },
   "description": "Verify that your node app can run on the currently installed version of node running on your system.",
-  "main": "index.js",
-  "scripts": {
-    "node-version-check": "node ./index.js --removeModules"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/unimaginativeGitHub/engine-preflight.git"
-  },
+  "devDependencies": {},
+  "homepage": "https://github.com/unimaginativeGitHub/engine-preflight#readme",
   "keywords": [
     "engine",
     "node",
     "version",
     "install"
   ],
-  "author": "Bradley D. Cooper",
+  "engines": {
+    "node": ">=18.15.0 <19",
+    "npm": ">=9.5.0 <10"
+  },
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/unimaginativeGitHub/engine-preflight/issues"
+  "main": "index.js",
+  "name": "engine-preflight",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/unimaginativeGitHub/engine-preflight.git"
   },
-  "homepage": "https://github.com/unimaginativeGitHub/engine-preflight#readme",
-  "dependencies": {
-    "commander": "3.0.2",
-    "semver": "6.3.0"
+  "scripts": {
+    "node-version-check": "node ./index.js --removeModules"
   },
-  "bin": {
-    "check-engine": "./index.js"
-  }
+  "version": "1.1.0"
 }
